# argos

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  2026-03-20-roadmap-update-brief.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ENVIRONMENT_CHECK.md  README.md  REVIEW.md  ROADMAP.md  docker-compose.yml  docker-entrypoint.sh  frames_2026-03-16_06.58.28.gv  pyproject.toml  rosdep.yaml
.github/workflows/: build-and-test.yml  release.yml
docker/isaac-lab/: Dockerfile  docker-compose.yml  requirements-training.txt
docker/px4-sitl/: Dockerfile.px4  README.md  docker-compose.yml
docs/: API.md  DEPLOYMENT.md  ai-workflow.md  coding-style-guide.md  dimos-benchmark-report.md  expert-review-2026-03-16.md  fmea-initial.md  hardware-design-spec.md  hardware-porting-guide.md  invention-challenge-draft.md  learning-plan.md  nfri-followup-emails.md  nfri-proposal-template.md  paper-draft.md  paper-outline.md  remaining-improvements.md  risk-assessment-matrix.md  security-setup.md  wsl2-setup-guide.md
docs/adr/: 001-supervised-autonomy.md  002-eight-sensor-architecture.md
knowledge/projects/research/: 2026-03-04-ms4-thermal-camera-research.md  2026-03-04-ms6-frontier-exploration-research.md  (+4 more)
learning-log/templates/: daily-log-template.md
learning-log/week01/: daily-log-day01.md  daily-log-day02.md  daily-log-day03.md  daily-log-day04.md  daily-log-day05.md  daily-log-day06.md  daily-log-day07.md  first-node-guide.md  plan.md  turtlesim-exercise.md
learning-log/week02/: daily-log-day08.md  daily-log-day09.md  daily-log-day10.md  daily-log-day11.md  daily-log-day12.md  daily-log-day13.md  daily-log-day14.md
learning-log/week03/: daily-log-day15.md  daily-log-day16.md  daily-log-day17.md  daily-log-day18.md  daily-log-day19.md
models/fire-smoke/: BENCHMARK.md  README.md  convert_tensorrt.py  data.yaml  evaluate.py  test.py  train.py
ros2_ws/src/argos_bt_nodes/: CMakeLists.txt  package.xml
ros2_ws/src/argos_bt_nodes/include/argos_bt_nodes/: detect_fire_condition.hpp  report_fire_action.hpp
ros2_ws/src/argos_bt_nodes/src/: detect_fire_condition.cpp  report_fire_action.cpp
ros2_ws/src/argos_description/: CMakeLists.txt  package.xml
ros2_ws/src/argos_description/config/: controllers.yaml  fastdds_no_shm.xml  gz_bridge.yaml  map_merge_params.yaml  nav2_params.yaml  sherpa_controllers.yaml  slam_params.yaml  zenoh_config.json5
ros2_ws/src/argos_description/config/bt/: argos_fire_bt.xml
ros2_ws/src/argos_description/launch/: argos_nav2_bringup.launch.py  demo.launch.py  display.launch.py  exploration.launch.py  gazebo.launch.py  map_merge.launch.py  monitor.launch.py  multi_px4.launch.py  multi_robot.launch.py  multi_sherpa.launch.py  navigation.launch.py  navigation_zenoh.launch.py  sherpa_sim.launch.py
ros2_ws/src/argos_description/models/argos_drone/: model.config  model.sdf
ros2_ws/src/argos_description/rviz/: display.rviz
ros2_ws/src/argos_description/urdf/: argos_ugv.urdf.xacro
ros2_ws/src/argos_description/urdf/control/: ros2_control.urdf.xacro
ros2_ws/src/argos_description/urdf/platform/: base.urdf.xacro  dimensions.xacro
ros2_ws/src/argos_description/urdf/sensors/: depth_camera.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  rgb_camera.urdf.xacro  segmentation_camera.urdf.xacro  thermal_camera.urdf.xacro
ros2_ws/src/argos_description/urdf/sherpa/: sherpa.urdf.xacro  sherpa_ros2_control.urdf.xacro  sherpa_sensors.urdf.xacro
ros2_ws/src/argos_description/web/: index.html
ros2_ws/src/argos_description/worlds/: fire_building.sdf  indoor_test.sdf  sherpa_fire_test.sdf
ros2_ws/src/argos_fire_ai/: package.xml  setup.cfg  setup.py
ros2_ws/src/argos_fire_ai/argos_fire_ai/: __init__.py  fire_detector_node.py
ros2_ws/src/argos_fire_ai/resource/: argos_fire_ai
ros2_ws/src/argos_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/argos_interfaces/action/: PatrolArea.action  ReportFireAlert.action
ros2_ws/src/argos_interfaces/msg/: AudioEvent.msg  DetectedObject.msg  DetectionArray.msg  FireAlert.msg  GasReading.msg  MissionState.msg  NetworkDiagnostics.msg  RobotStatus.msg  StructuralAlert.msg  ThermalDetection.msg  VictimDetection.msg
ros2_ws/src/argos_interfaces/srv/: NavigateToObject.srv
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_interfaces/action/: MoveToTarget.action
ros2_ws/src/my_robot_interfaces/msg/: DetectionArray.msg  MissionState.msg  RobotStatus.msg
scripts/: analyze_map.py  check-environment.sh  convert-tensorrt.sh  demo-recording-guide.sh  demo_recorder.py  generate_demo_gif.py  network-emulation.sh  outdoor_test_launcher.sh  overnight-full.sh  overnight-tasks.sh  record_demo.py  resume-learning.sh  run_demo_gui.sh  setup-dds-security.sh  setup-ros2-jazzy.sh  setup_sros2.sh  sil_tests.sh  start-rosbridge.sh  test_frontier_run.py  test_hose_conflict.py  test_multi_robot.py  test_nav2_goal.py  test_px4_offboard.py  test_sherpa_spawn.py  test_v6_platform.py  verify-sim-pipeline.sh
scripts/diagnostics/: check_clock.sh  check_display.sh  check_display2.sh  check_gz_bridge_health.sh  check_gz_log.sh  check_nav2.sh  check_nav2_full.sh  check_nav2_lifecycle.sh  check_nav_status.sh  check_robot_motion.sh  kill_all_ros.sh
scripts/gazebo/: start_gazebo.sh  test_gazebo_direct.sh
scripts/misc/: manual_save_conv.sh  organize_desktop.sh  save_conv.sh
scripts/nav2/: kill_nav2.sh  launch_nav2.sh  launch_nav2_clean.sh  nav_goal_far.sh  nav_goal_full.sh  nav_test_move.sh  restart_bridge.sh  send_nav_goal.sh
scripts/rviz/: bring_rviz.ps1  capture_by_handle.ps1  capture_rviz.ps1  capture_rviz.sh  find_all_windows.ps1  focus_rviz.ps1  list_windows.ps1  screenshot.ps1  screenshot_all.ps1  start_rviz2.sh
scripts/slam/: activate_slam.sh  check_slam.sh  check_slam_proc.sh  check_slam_status.sh  launch_slam.sh
training/: finetune_fire_yolo.py  isaac_argos.py  marl_env.py
training/data/: convert_synfire_masks.py  evaluate_domain_gap.py  flame_diffuser.py  gazebo_auto_annotate.py  prepare_fire_dataset.py
training/runs/: domain_gap_report.json
(+150 files in other folders)
