<?xml version="1.0"?>
<package format="3">
  <name>argos_fire_ai</name>
  <version>1.0.0</version>
  <description>ARGOS AI fire/smoke detection module (AGPL-3.0 — separate from Apache-2.0 main)</description>
  <maintainer email="jamonnine@github.com">jamonnine</maintainer>
  <license>AGPL-3.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>argos_interfaces</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
