<?xml version="1.0"?>
<package format="3">
  <name>argos_interfaces</name>
  <version>2.0.0</version>
  <description>ARGOS custom interfaces: 10 msg (8-sensor suite + fire/mission) + 1 srv + 2 action</description>
  <maintainer email="jamonnine@github.com">jamonnine</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 인터페이스 생성에 필요한 의존성 -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
