<?xml version="1.0"?>
<package format="3">
  <name>my_robot_interfaces</name>
  <version>0.0.1</version>
  <description>Custom interfaces (actions, messages, services) for my_robot_bringup</description>
  <maintainer email="jamonnine@todo.todo">jamonnine</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 인터페이스 생성에 필요한 의존성 -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
